eks-gitops/applications/manifest/ingress/argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/group.name: appsvc-argocd
    alb.ingress.kubernetes.io/subnets: subnet-093badb9c0eed1804,subnet-05696bbd623ce18ab,subnet-01ef905ddc9a753b4
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: argo.dmnd-pkrb-dev-1.int
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
